--- a/app/src/main/res/layout/activity_two_pane.xml
+++ b/app/src/main/res/layout/activity_two_pane.xml
@@ -4,7 +4,8 @@
     android:layout_height="match_parent"
     android:divider="?android:dividerHorizontal"
     android:orientation="horizontal"
-    android:showDividers="middle">
+    android:showDividers="middle"
+    android:layout_weight="3">
 
 
     <FrameLayout
@@ -18,5 +19,6 @@
         android:id="@+id/stock_detail_fragment"
         android:layout_width="0dp"
         android:layout_height="match_parent"
-        android:layout_weight="1" />
+        android:layout_weight="2"
+        android:visibility="gone"/>
 </LinearLayout>
