--- a/app/src/main/res/layout/fragment_stock_list.xml
+++ b/app/src/main/res/layout/fragment_stock_list.xml
@@ -17,11 +17,12 @@
         android:layout_margin="16dp"
         android:elevation="6dp"
         android:src="@drawable/ic_add_white_24dp"
+        android:contentDescription="@string/add_stock"
         fab:fab_colorNormal="@color/material_blue_500"
         fab:fab_colorPressed="@color/material_blue_600"
         fab:fab_colorRipple="@color/ripple"
         fab:fab_shadow="true"
         fab:fab_type="normal"
         fab:layout_anchor="recycler_view"
-        fab:layout_anchorGravity="bottom | end" />
+        fab:layout_anchorGravity="bottom|end" />
 </FrameLayout>
