--- a/app/src/main/res/menu/global.xml
+++ b/app/src/main/res/menu/global.xml
@@ -3,6 +3,7 @@
     <item
         android:id="@+id/action_settings"
         android:title="@string/action_settings"
+        android:contentDescription="@string/action_settings"
         android:orderInCategory="100"
         app:showAsAction="never" />
 </menu>
