--- a/app/src/main/res/menu/my_stocks.xml
+++ b/app/src/main/res/menu/my_stocks.xml
@@ -5,12 +5,14 @@
     <item
         android:id="@+id/action_change_units"
         android:title="@string/action_change_units"
+        android:contentDescription="@string/action_change_units"
         android:icon="@drawable/ic_attach_money_white_24dp"
         android:orderInCategory="99"
         app:showAsAction="always" />
     <item
         android:id="@+id/action_settings"
         android:title="@string/action_settings"
+        android:contentDescription="@string/action_settings"
         android:orderInCategory="100"
         app:showAsAction="never" />
 </menu>
