--- a/app/src/main/res/layout/fragment_stock_detail.xml
+++ b/app/src/main/res/layout/fragment_stock_detail.xml
@@ -11,7 +11,7 @@
         android:gravity="center"
         android:id="@+id/stock_name"
         android:textSize="30sp"
-        android:textStyle="bold"/>
+        android:textStyle="bold" />
 
 
     <TextView
@@ -22,12 +22,11 @@
         android:textSize="20sp"
         android:padding="16dp"
         android:textColor="#FFF"
-        android:visibility="gone"/>
+        android:visibility="gone" />
 
     <com.github.mikephil.charting.charts.LineChart
         android:id="@+id/stock_chart"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        />
+        android:layout_height="match_parent" />
 
 </LinearLayout>
