--- a/app/src/main/res/xml/widget_provider.xml
+++ b/app/src/main/res/xml/widget_provider.xml
@@ -1,8 +1,11 @@
+<?xml version="1.0" encoding="utf-8"?>
 <appwidget-provider xmlns:android="http://schemas.android.com/apk/res/android"
-    android:minWidth="180dp"
-    android:minHeight="110dp"
-    android:updatePeriodMillis="0"
+    android:minWidth="@dimen/widget_minWidth"
+    android:minHeight="@dimen/widget_minHeight"
+    android:previewImage="@mipmap/ic_launcher"
+    android:updatePeriodMillis="86400000"
     android:initialLayout="@layout/stock_widget"
     android:initialKeyguardLayout="@layout/stock_widget"
     android:resizeMode="horizontal|vertical"
-    android:widgetCategory="home_screen"></appwidget-provider>
+    android:widgetCategory="home_screen"
+    />
